minor changes in service layer and fix the layout bugs of product carousel

--- a/src/components/style/ProductCard.module.css
+++ b/src/components/style/ProductCard.module.css
@@ -2,6 +2,7 @@
     width: 300px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    background-color: white;
     overflow: hidden;
   }
   
@@ -27,15 +28,16 @@
   }
   
   .product-name {
-    font-size: 20px;
+    font-size: 18px;
     font-weight: bold;
     margin-bottom: 10px;
   }
   
   .product-price {
-    font-size: 18px;
+    font-size: 20px;
     font-weight: bold;
-    color: #f44336;
+    /* color: #f44336; */
+    /* color: black; */
     margin-bottom: 10px;
   }
   
@@ -43,7 +45,8 @@
     display: block;
     width: 100%;
     padding: 10px;
-    background-color: #f44336;
+    /* background-color: #f44336; */
+    background-color: #2874F0;
     color: #fff;
     font-size: 16px;
     font-weight: bold;
